# bleMqttProxy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  README_Grafana+InfluxDB+Script.md  README_How-To.md  TODO.txt  log.blemqttproxy.20201023152829.txt  partitions.csv  sdkconfig.old.preSSD1306  sdkconfig.sic-pre-neuerstellung  sdkconfig.used  sdkconfig_M5Stack  sdkconfig_M5Stick  sdkconfig_M5StickC  sdkconfig_WEMOS_LOLIN  tmp_draw_char.xlsx
Box/: blemqttproxy_3d.stl
Documents/VS Code/: settings.json
Logs/: new 4.csv
Scripts/: mosq-influx-task.py  simple.server.py
components/button/: CMakeLists.txt
components/param/: CMakeLists.txt  LICENSE
components/ssd1306/: ssd1306.c  ssd1306_convert_fonts.c  ssd1306_fonts.c
components/ssd1306/include/: iot_ssd1306.h  ssd1306.h  ssd1306_convert_fonts.h  ssd1306_fonts.h
main/: CMakeLists.txt  Kconfig.projbuild  axp192.c  axp192.h  beacon.c  beacon.h  ble.c  ble.h  ble_mqtt.c  ble_mqtt.h  ble_myclient.c  ble_myclient.h  ble_myserver.c  ble_myserver.h  ble_sntp.c  ble_sntp.h  blemqttproxy.c  blemqttproxy.h  buttons.c  buttons.h  component.mk  display.c  display.h  gattc_demo.c.bak  gui.c  gui.h  helperfunctions.c  helperfunctions.h  localsensor.c  localsensor.h  log.txt  lv_font_montserrat_10.c  lv_font_montserrat_11.c  lv_font_montserrat_9.c  lv_testdisplay.c  lv_testdisplay.h  m5stack_16.c  m5stack_16_font_symbol.c  m5stack_22_font_symbol.c  m5stack_28.c  (+30 more)
